--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,11 @@
     <string name="button_zero">0</string>
     <string name="button_plus">+</string>
     <string name="button_minus">-</string>
-    <string name="button_division">/</string>
-    <string name="button_multiplication">*</string>
+    <string name="button_division">&#247;</string>
+    <string name="button_multiplication">&#215;</string>
     <string name="button_point">.</string>
     <string name="button_submit">=</string>
-    <string name="button_clear">Clear</string>
+    <string name="button_clear">C</string>
+    <string name="button_percent">%</string>
+    <string name="button_plus_minus">&#177;</string>
 </resources>
