--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="button_minus">-</string>
     <string name="button_division">&#247;</string>
     <string name="button_multiplication">&#215;</string>
-    <string name="button_point">.</string>
+    <string name="button_point">,</string>
     <string name="button_submit">=</string>
     <string name="button_clear">C</string>
     <string name="button_percent">%</string>
